Project page updates - fixed card grid overflow - updated card design

--- a/app/globals.css
+++ b/app/globals.css
@@ -44,10 +44,9 @@
   }
 }
 
-
-::-webkit-scrollbar {
+/* ::-webkit-scrollbar {
   display: none;
-}
+} */
 
 .hexagon {
   clip-path: polygon(89.1% 0, 100% 22.5%, 100% 100%, 50% 100%, 0 100%, 0 0);
@@ -56,17 +55,39 @@
   transition: box-shadow 0.3s ease-in-out, background-color 0.3s ease-in-out;
 }
 
-.hexagon-small {
-  clip-path: polygon(50% 0%, 100% 0, 100% 70%, 70% 100%, 0 100%, 0 0);
-  /* position: relative; */
-  /* background-color: #6c63ff; */
-  transition: box-shadow 0.3s ease-in-out, background-color 0.3s ease-in-out;
-}
-
 .hexagon:hover {
   box-shadow: inset 0 0 0 0 #d63d54;
 }
 
+.hexagon-small {
+  clip-path: polygon(50% 0%, 100% 0, 100% 70%, 70% 100%, 0 100%, 0 0);
+  transition: box-shadow 0.3s ease-in-out, background-color 0.3s ease-in-out;
+}
 .hex3 {
   clip-path: polygon(50% 0%, 100% 0, 100% 95%, 95% 100%, 0 100%, 0 0);
+}
+
+.card {
+  background-color: #fff;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  transition: box-shadow 0.3s ease-in-out;
+}
+
+.card::before {
+  content: "";
+  position: absolute;
+  z-index: -1;
+  bottom: -16px;
+  right: -16px;
+  background-color: #252525;
+  height: 32px;
+  width: 32px;
+  border-radius: 32px;
+  transform: scale(1);
+  transform-origin: 50% 50%;
+  transition: transform 0.35s ease-out;
+}
+
+.card:hover:before {
+  transform: scale(30);
 }
